# pixy_node

./: .gitignore  CMakeLists.txt  main.cpp  package.xml
docs/: Guidance on Focus Length Measurement.docx  Guidance on Position Estimation Setup.docx  Guidance on dIP Measurement.docx
docs/Guidance on dIP Measurement/: Guidance on dIP Measurement.m
launch/: beta.launch
lib/indoor_positioning/: MOT.h  drone_loc.c  drone_loc.h  unitest.c
lib/indoor_positioning/dev/c_code_for_indoor_position/: ball_new.c  readme.txt
lib/indoor_positioning/dev/matlab_code_for_indoor_position/: angle.m  readme.txt  test_ball_new.m
lib/multiple_object_tracking/: mot.cpp  mot.h
lib/multiple_object_tracking/calibrate/: compile.sh  multipleObjectTracking.cpp
pixy_node/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  main.cpp  pan_tilt.cpp  pan_tilt.cpp~  pantilt_c
pixy_node/camera_calibrate/: CMakeLists.txt  VID5.xml  camera_calibrate  camera_calibration.cpp  default.xml  out_camera_data.xml  parameter0.xml
