<?xml version="1.0"?>
<package>
    <name>pixy_node</name>
    <version>0.1.0</version>
    <description>The pixy node to run pixy and calculate the position</description>

    <maintainer email="gaochangyu@163.com">Changyu Gao</maintainer>
    <license>BSD</license>
    <author email="gaochangyu@163.com">Changyu Gao</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>

</package>